# vox-project

./: .gitignore  Cargo.toml  config.toml  notes.db-shm  notes.db-wal
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/hooks/: useRecorder.ts  useVAD.ts  useVoxaSocket.ts
migrations/: 1_create_users.sql  20260212124632_create_notes_table.sql  2_create_users.sql  3_create_users.sql  4_create_users.sql
src/: audio_capture.rs  config.rs  main.rs  models.rs  prompts.rs  stt.rs
src/api/: ws.rs
src/handlers/: transcribe.rs
src/services/: deepgram.rs  llm.rs  mod.rs
