[package]
name = "vox-project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }

# Async and Serialization
futures = "0.3"
tracing-subscriber = "0.3"
tracing = "0.1"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features =  ["runtime-tokio", "sqlite", "macros"]}


dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"